--- a/githooks.config.template
+++ b/githooks.config.template
@@ -7,7 +7,8 @@ CONF_pre_commit_active=true
 CONF_pre_commit_cs_active=true
 #The standard to be used on with the phpcs
 CONF_pre_commit_cs_standard=ZEND
-
+#Whitespacing
+CONF_pre_commit_ws_active=true
 
 
 #Commit message hook
